SCOPE OF WORK COMPLETE
